--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,111 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".DashboardActivity">
 
-
-    <data>
-        <variable
-            name="cardIcon"
-            type="android.graphics.drawable.Drawable" />
-        <variable
-            name="cardText"
-            type="java.lang.String" />
-    </data>
-    <ScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".DashboardActivity">
+        android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="200dp"
+            android:background="@drawable/gradient_title"
+            android:orientation="vertical"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:background="@drawable/gradient_title"
-                android:orientation="vertical"
-                app:layout_constraintTop_toTopOf="parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="20dp">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/text_Name"
+                    style="@style/TextBase"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginRight="20dp">
+                    android:text="Name"
+                    android:textColor="@color/white"
+                    android:textSize="22sp"
+                    tools:ignore="HardcodedText" />
 
-                    <TextView
-                        android:id="@+id/text_Name"
-                        style="@style/TextBase"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Name"
-                        android:textColor="@color/white"
-                        android:textSize="22sp"
-                        tools:ignore="HardcodedText" />
-
-                    <TextView
-                        android:id="@+id/text_ScreenName"
-                        style="@style/TextBase"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/text_Name"
-                        android:text="ScreenName"
-                        android:textColor="@color/white"
-                        android:textSize="14sp"
-                        tools:ignore="HardcodedText" />
-
-                    <ImageView
-                        android:id="@+id/image_profilePicture"
-                        android:layout_width="62dp"
-                        android:layout_height="62dp"
-                        android:layout_alignParentEnd="true" />
-
-                </RelativeLayout>
-
-                <GridLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/text_ScreenName"
+                    style="@style/TextBase"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:alignmentMode="alignMargins"
-                    android:columnCount="2"
-                    android:columnOrderPreserved="false"
-                    android:rowCount="3">
+                    android:layout_below="@id/text_Name"
+                    android:text="ScreenName"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    tools:ignore="HardcodedText" />
 
-                    <com.sasarinomari.tweetcleaner.DashboardCard
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
-                        app:text="@string/TweetCleaner"
-                        app:icon="@drawable/delete_empty"/>
+                <ImageView
+                    android:id="@+id/image_profilePicture"
+                    android:layout_width="62dp"
+                    android:layout_height="62dp"
+                    android:layout_alignParentEnd="true" />
 
-                    <com.sasarinomari.tweetcleaner.DashboardCard
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
-                        app:text="@string/FollowerManagement"
-                        app:icon="@drawable/account_arrow_left"/>
+            </RelativeLayout>
 
-                    <com.sasarinomari.tweetcleaner.DashboardCard
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_rowWeight="1"
-                        android:layout_columnWeight="1"
-                        app:text="@string/FollowingManagement"
-                        app:icon="@drawable/account_arrow_left"/>
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:alignmentMode="alignMargins"
+                android:columnCount="2"
+                android:columnOrderPreserved="false"
+                android:rowCount="3">
 
-                </GridLayout>
-            </LinearLayout>
+                <com.sasarinomari.tweetcleaner.DashboardCard
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    app:icon="@drawable/delete_empty"
+                    app:text="@string/TweetCleaner" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
-</layout>
+                <com.sasarinomari.tweetcleaner.DashboardCard
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    app:icon="@drawable/account_arrow_left"
+                    app:text="@string/FollowerManagement" />
+
+                <com.sasarinomari.tweetcleaner.DashboardCard
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    app:icon="@drawable/account_arrow_left"
+                    app:text="@string/FollowingManagement" />
+
+            </GridLayout>
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
