--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -69,6 +69,7 @@
                 android:rowCount="3">
 
                 <com.sasarinomari.tweetcleaner.DashboardCard
+                    android:id="@+id/button_erase"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
