Hezter Condition을 Hetzer에 전달하여 트윗 삭제 작업 수행

--- a/app/src/main/res/layout/activity_hetzer.xml
+++ b/app/src/main/res/layout/activity_hetzer.xml
@@ -41,8 +41,8 @@
         android:layout_height="wrap_content"
         android:background="@null"
         android:enabled="false"
-        android:fontFamily="@font/noto_sans_light"
-        android:textSize="9sp"
+        style="@style/TextBase"
+        android:textSize="10sp"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
