--- a/app/src/main/res/layout/activity_hetzer_conditions.xml
+++ b/app/src/main/res/layout/activity_hetzer_conditions.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:orientation="vertical"
         android:paddingLeft="@dimen/activity_horizontal_padding"
         android:paddingTop="@dimen/activity_vertical_padding"
@@ -18,17 +19,19 @@
 
 
         <TextView
-            style="@style/TextBaseBold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/noto_sans_bold"
             android:text="@string/DeleteOption"
+            android:textColor="@color/black"
             android:textSize="24sp" />
 
         <TextView
-            style="@style/TextBase"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/DeleteOptionPlease" />
+            android:fontFamily="@font/noto_sans_light"
+            android:text="@string/DeleteOptionPlease"
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
@@ -58,26 +61,30 @@
                 <ImageView
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:src="@color/colorAccent" />
+                    android:src="@drawable/plus_circle" />
 
                 <TextView
-                    style="@style/TextBase"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
-                    android:text="@string/AddCondition" />
+                    android:fontFamily="@font/noto_sans_light"
+                    android:text="@string/AddCondition"
+                    android:textColor="@color/black" />
             </LinearLayout>
 
             <Button
                 android:id="@+id/button_ok"
-                android:layout_marginTop="@dimen/listitem_vertical_padding"
-                android:layout_marginBottom="@dimen/listitem_vertical_padding"
-                android:layout_marginRight="@dimen/listitem_horizontal_padding"
-                android:layout_marginLeft="@dimen/listitem_horizontal_padding"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
                 android:layout_gravity="end"
-                android:text="@string/OK" />
+                android:layout_marginLeft="@dimen/listitem_horizontal_padding"
+                android:layout_marginTop="60dp"
+                android:layout_marginRight="@dimen/listitem_horizontal_padding"
+                android:layout_marginBottom="@dimen/listitem_vertical_padding"
+                android:background="@drawable/roundrect_colorprimary_5dp"
+                android:fontFamily="@font/noto_sans_light"
+                android:text="@string/CleanTweet"
+                android:textColor="@color/white" />
         </LinearLayout>
 
 
