--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#43B1F4</color>
     <color name="colorPrimaryDark">#3749FA</color>
     <color name="colorAccent">#37FADC</color>
+    <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="dialogBackground">#B5000000</color>
+
 </resources>
