--- a/app/src/main/res/drawable/gradient_title.xml
+++ b/app/src/main/res/drawable/gradient_title.xml
@@ -3,7 +3,7 @@
     <gradient
         android:angle="90"
         android:endColor="@color/colorPrimaryDark"
-        android:startColor="@color/colorPrimary"
+        android:startColor="#139df1"
         android:type="linear" />
 </shape>
 
