--- a/app/src/main/res/layout/view_dashboard_card.xml
+++ b/app/src/main/res/layout/view_dashboard_card.xml
@@ -8,7 +8,7 @@
     app:cardCornerRadius="12dp"
     app:cardElevation="6dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
@@ -16,22 +16,40 @@
         android:padding="16dp">
 
         <ImageView
+            android:id="@+id/oval"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/oval"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
+
+        <ImageView
             android:id="@+id/icon"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@color/colorPrimary" />
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@color/white"
+            app:layout_constraintBottom_toBottomOf="@id/oval"
+            app:layout_constraintLeft_toLeftOf="@id/oval"
+            app:layout_constraintRight_toRightOf="@id/oval"
+            app:layout_constraintTop_toTopOf="@id/oval" />
 
         <TextView
             android:id="@+id/text"
-            android:fontFamily="@font/noto_sans_light"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginStart="16dp"
+            android:fontFamily="@font/noto_sans_light"
             android:text="Text"
-            android:textAlignment="center"
+            android:textSize="20sp"
             android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="@id/oval"
+            app:layout_constraintLeft_toRightOf="@id/oval"
+            app:layout_constraintTop_toTopOf="@id/oval"
             tools:ignore="HardcodedText" />
 
-    </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
