--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#43B1F4</color>
-    <color name="colorPrimaryDark">#3749FA</color>
+    <color name="colorPrimary">#73c5f7</color>
+    <color name="colorPrimaryDark">#5bbbf5</color>
     <color name="colorAccent">#37FADC</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
