--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,6 +2,7 @@
 <resources>
     <declare-styleable name="DashboardCard">
         <attr name="text" format="reference|string" />
+        <attr name="description" format="reference|string" />
         <attr name="icon" format="reference" />
         <attr name="ovalColor" format="color" />
     </declare-styleable>
