--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#5bbbf5</color>
     <color name="colorAccent">#37FADC</color>
     <color name="black">#000000</color>
+    <color name="grey">#808080</color>
     <color name="white">#FFFFFF</color>
     <color name="dialogBackground">#B5000000</color>
 
