버튼 이펙트를 포함한 디자인 수정

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -101,6 +101,7 @@
             <com.sasarinomari.tweetcleaner.DashboardCard
                 android:layout_width="0dp"
                 android:layout_height="128dp"
+                android:id="@+id/button_followingManagement"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 app:icon="@drawable/account_arrow_right"
@@ -110,6 +111,7 @@
 
             <com.sasarinomari.tweetcleaner.DashboardCard
                 android:layout_width="0dp"
+                android:id="@+id/button_followerManagement"
                 android:layout_height="128dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
