--- a/app/src/main/res/layout/activity_hetzer_conditions.xml
+++ b/app/src/main/res/layout/activity_hetzer_conditions.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
     tools:context=".hetzer.HetzerConditionsActivity">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="50dp"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingLeft="@dimen/activity_horizontal_padding"
         android:paddingTop="@dimen/activity_vertical_padding"
@@ -23,22 +25,25 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/noto_sans_bold"
             android:text="@string/DeleteOption"
-            android:textColor="@color/black"
-            android:textSize="24sp" />
+            android:textColor="@color/white"
+            android:textSize="26sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="3dp"
             android:fontFamily="@font/noto_sans_light"
             android:text="@string/DeleteOptionPlease"
-            android:textColor="@color/black" />
+            android:textColor="@color/white"
+            android:textSize="15sp" />
 
     </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp">
+        android:layout_height="0dp"
+        android:layout_marginTop="40dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:id="@+id/layout_scrollContent"
@@ -51,6 +56,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginTop="40dp"
+                android:foreground="?attr/selectableItemBackground"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:paddingLeft="@dimen/listitem_horizontal_padding"
@@ -67,28 +74,32 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
-                    android:fontFamily="@font/noto_sans_light"
+                    android:layout_marginBottom="1dp"
+                    android:fontFamily="@font/noto_sans_regular"
                     android:text="@string/AddCondition"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/white"
+                    android:textSize="15sp" />
             </LinearLayout>
 
-            <Button
-                android:id="@+id/button_ok"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_gravity="end"
-                android:layout_marginLeft="@dimen/listitem_horizontal_padding"
-                android:layout_marginTop="60dp"
-                android:layout_marginRight="@dimen/listitem_horizontal_padding"
-                android:layout_marginBottom="@dimen/listitem_vertical_padding"
-                android:background="@drawable/roundrect_colorprimary_5dp"
-                android:fontFamily="@font/noto_sans_light"
-                android:text="@string/CleanTweet"
-                android:textColor="@color/white" />
         </LinearLayout>
 
 
     </ScrollView>
 
+    <Button
+        android:id="@+id/button_ok"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_gravity="end"
+        android:layout_marginLeft="@dimen/listitem_horizontal_padding"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="@dimen/listitem_horizontal_padding"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/roundrect_white_5dp"
+        android:fontFamily="@font/noto_sans_light"
+        android:foreground="?attr/selectableItemBackground"
+        android:text="@string/CleanTweet"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="15sp" />
 
 </LinearLayout>
