--- a/app/src/main/res/layout/view_dashboard_card.xml
+++ b/app/src/main/res/layout/view_dashboard_card.xml
@@ -11,6 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:foreground="?attr/selectableItemBackground"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="16dp">
