--- a/app/src/main/res/layout/view_hetzer_condition.xml
+++ b/app/src/main/res/layout/view_hetzer_condition.xml
@@ -1,33 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="@dimen/listitem_horizontal_padding"
-    android:paddingTop="@dimen/listitem_vertical_padding"
-    android:paddingRight="@dimen/listitem_horizontal_padding"
-    android:paddingBottom="@dimen/listitem_vertical_padding">
+    android:background="@color/colorPrimary"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/text"
-        android:fontFamily="@font/noto_sans_light"
-        android:textColor="@color/black"
-        android:layout_width="wrap_content"
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorPrimaryDark" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:text="Text"
-        tools:ignore="HardcodedText" />
+        android:paddingLeft="@dimen/listitem_horizontal_padding"
+        android:paddingTop="@dimen/listitem_vertical_padding"
+        android:paddingRight="@dimen/listitem_horizontal_padding"
+        android:paddingBottom="@dimen/listitem_vertical_padding">
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:fontFamily="@font/noto_sans_light"
+            android:text="Text"
+            android:textColor="@color/white"
+            tools:ignore="HardcodedText" />
 
 
-    <ImageView
-        android:id="@+id/button_more"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:padding="5dp"
-        android:src="@drawable/dots_vertical" />
-
-
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/button_more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:foreground="?attr/selectableItemBackground"
+            android:padding="5dp"
+            android:src="@drawable/dots_vertical" />
+    </RelativeLayout>
+</LinearLayout>
