--- a/app/src/main/res/layout/activity_follower_management.xml
+++ b/app/src/main/res/layout/activity_follower_management.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".FollowerManagement">
 
+    <ListView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
