--- a/app/src/main/res/layout/item_user_unfollow.xml
+++ b/app/src/main/res/layout/item_user_unfollow.xml
@@ -1,65 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:orientation="horizontal"
-                android:background="@color/colorPrimary"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:color/transparent"
+    android:orientation="horizontal">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        app:cardCornerRadius="12dp"
+        android:background="@null"
+        app:cardElevation="6dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingLeft="14dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="4dp"
+            android:paddingRight="14dp">
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-
-    <ImageView
-            android:id="@+id/image_profilePicture"
-            android:layout_width="62dp"
-            android:layout_height="62dp"
-            android:background="@color/white"/>
-
-    <LinearLayout android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_toEndOf="@id/image_profilePicture"
-                  android:layout_marginStart="10dp"
-                  android:orientation="vertical">
-
-        <TextView
-                android:id="@+id/text_Name"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/noto_sans_bold"
-                android:text="Name"
-                android:textColor="@color/white"
-                android:textSize="13sp"
-                tools:ignore="HardcodedText"/>
+                android:orientation="horizontal">
 
-        <TextView
-                android:id="@+id/text_ScreenName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/noto_sans_light"
-                android:text="\@ScreenName"
-                android:textColor="@color/white"
-                android:textSize="10sp"
-                tools:ignore="HardcodedText"/>
 
-        <TextView
+                <ImageView
+                    android:id="@+id/image_profilePicture"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@color/colorPrimary" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/text_Name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:fontFamily="@font/noto_sans_regular"
+                        android:text="Text"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        tools:ignore="HardcodedText" />
+
+                    <TextView
+                        android:id="@+id/text_ScreenName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:fontFamily="@font/noto_sans_light"
+                        android:text="Text"
+                        android:textColor="@color/grey"
+                        android:textSize="10sp"
+                        tools:ignore="HardcodedText" />
+
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <TextView
                 android:id="@+id/text_bio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="left"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/noto_sans_light"
-                android:text="Profile bio Description Area. This can be looooooooooooong Text and also can include line break.\ngood."
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                tools:ignore="HardcodedText"/>
-    </LinearLayout>
+                android:text="Text"
+                android:textColor="@color/black"
+                android:textSize="11sp"
+                tools:ignore="HardcodedText" />
 
-    <Button android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Unfollow"
-            android:textAllCaps="false"
-            android:layout_alignParentEnd="true"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:background="#eeeeee"
+                android:layout_marginTop="25dp"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:id="@+id/button_detail"
+                    android:layout_width="0dp"
+                    android:background="@color/white"
+                    android:layout_marginTop="1dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/noto_sans_light"
+                        android:text="@string/ShowProfile"
+                        android:textAllCaps="false"
+                        android:textColor="@color/black"
+                        android:textSize="13sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/button_unfollow"
+                    android:layout_width="0dp"
+                    android:background="@color/white"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginLeft="1dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/noto_sans_light"
+                        android:text="@string/Unfollow"
+                        android:textAllCaps="false"
+                        android:textColor="@color/black"
+                        android:textSize="13sp" />
+                </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
